# EmpireOfWind

./: '  .gitattributes  Cargo.toml  README.md  empire_of_wind_codebase.txt  gather_llm_knowledge.sh  test.blend
.github/workflows/: eow.yml
assets/: registry.json  ship_colliders_workflow.md
assets/shaders/: custom_material.wgsl  invisible_material.frag  invisible_material.vert  invisible_material.wgsl  transparent_blocking.wgsl
src/: empire_of_wind_plugins.rs  lib.rs  main.rs  mod.rs
src/ai_eating_behavior/: mod.rs
src/ai_navigation/: mod.rs
src/ai_sleeping_behavior/: mod.rs
src/area_management/: area_management_plugin.rs  mod.rs
src/area_visibility/: mod.rs
src/asset_management/: mod.rs
src/atmospheric_lighting/: mod.rs
src/buoyancy_physics/: mod.rs
src/camera_control/: mod.rs
src/collider_management/: mod.rs
src/components/: active_areas.rs  area_enter_marker.rs  area_exit_marker.rs  area_name.rs  buoyancy.rs  buoyancy_marker.rs  camera.rs  camera_zoom.rs  character.rs  debug_camera.rs  eat.rs  fatigue.rs  fatigue_scorer.rs  food.rs  hunger.rs  hunger_scorer.rs  main_camera.rs  mod.rs  move_to_nearest.rs  nav_mesh_marker.rs  navigation_path.rs  npc.rs  player.rs  ship.rs  sleep.rs  sleep_area.rs  sun.rs  vec3i.rs  voxel.rs  voxel_visual.rs  water_interactable.rs
src/constants/: day_cycle.rs  mod.rs  voxel.rs
src/crew_management/: mod.rs
src/events/: mod.rs  movement.rs  nav_mesh_debug_toggle.rs  navmesh.rs
src/food/: mod.rs
src/materials/: custom_material.rs
src/navmesh/: mod.rs
src/ocean/: mod.rs
src/player/: mod.rs
src/player_input/: mod.rs
src/plugins/: assets.rs  atmosphere.rs  buoyancy.rs  camera.rs  character.rs  eat.rs  editor_types.rs  fatigue.rs  hunger.rs  input.rs  mod.rs  movement.rs  navmesh.rs  navmesh_test.rs  npc.rs  ocean.rs  pathfinding.rs  physics.rs  player.rs  ship.rs  ship_builder.rs  sky.rs  sleep.rs
src/resources/: active_areas.rs  cycle_timer.rs  mod.rs  pathfinding_tasks.rs  ship_assets.rs
src/ship/: mod.rs
src/ship_items/: mod.rs
src/stairs_test/: mod.rs
src/sun/: mod.rs
src/sun_cycle/: mod.rs
src/systems/: calculate_and_apply_buoyancy.rs  calculate_fatigue_score.rs  calculate_hunger_score.rs  camera_switching.rs  control_cycle_timer.rs  eat_action.rs  handle_player_input.rs  increase_fatigue.rs  increase_hunger.rs  interpolate_zoom.rs  manage_active_areas.rs  mod.rs  move_camera.rs  navigate_to_nearest.rs  propagate_render_layers.rs  read_area_markers.rs  read_buoyancy_objects.rs  read_colliders.rs  setup_atmosphere.rs  setup_camera.rs  sleep_action.rs  spawn_food.rs  spawn_furniture.rs  spawn_npc.rs  spawn_player.rs  spawn_ship.rs  (+5 more)
tests/: physics_tests.rs
(+189 files in other folders)
