[package]
name = "empire_of_wind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "wayland"] }
bevy_editor_pls = "0.7"
bevy_xpbd_3d = "0.3"
bevy-inspector-egui = "0.22.0"
bevy_panorbit_camera = "0.10.0"
big-brain = { git = "https://github.com/zkat/big-brain.git", rev = "be99c75d4a0eddd7b0d44cab5df5e6d7fbb3be59"}
oxidized_navigation = { version = "0.8.1", features = ["debug_draw", "xpbd"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
